# training-cqrs

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
app_command/: main.py
app_query/: db.py  main.py  models.py
event_bus/: listener.py  mq_conn.py
