[tool.poetry]
name = "training-cqrs"
version = "0.1.0"
description = ""
authors = ["Hojung Yun <hojung.yun@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
fastapi-sqlalchemy = "^0.2.1"
pydantic = "^2.4.2"
beanie = "^1.23.3"
aiosqlite = "^0.19.0"
greenlet = "^3.0.1"
pika = "^1.3.2"
retry = "^0.9.2"
requests = "^2.31.0"
orjson = "^3.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
